--- a/prepros-6.config
+++ b/prepros-6.config
@@ -24,6 +24,7 @@
         "css/_enterSite.sass",
         "css/_flex.sass",
         "css/_main-body.sass",
+        "css/animate.scss",
         "css/_lockup.sass",
         "css/_editorials.sass"
       ]
