--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,7 +26,9 @@
         "css/_main-body.sass",
         "css/animate.scss",
         "css/_lockup.sass",
-        "css/_editorials.sass"
+        "css/_editorials.sass",
+        "css/_landscapes.sass",
+        "css/_mixed.sass"
       ]
     }
   ],
