--- a/prepros-6.config
+++ b/prepros-6.config
@@ -27,6 +27,7 @@
         "css/_flex.sass",
         "css/_main-body.sass",
         "css/animate.scss",
+        "css/_about-me.sass",
         "css/_lockup.sass",
         "css/_editorials.sass",
         "css/_landscapes.sass",
